--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,6 +88,14 @@ body {
 	width: 95%;
 	padding: 10px 30px 10px 10px;
 }
+#main h1 {
+	margin: 0 20px 0 0;
+	padding: 10px 5px;
+	color: #FFF;
+	font-size: 30px;
+	border-left: solid 10px #C00;
+	background: #F90 repeat-y;
+}
 #main h2 {
 	margin: 0 0 10px 0;
 	padding: 3px 10px 3px 10px;
@@ -136,7 +144,7 @@ body {
 #side {
 	width: 85%;
 	padding: 20px;
-	background-color: #F99;
+	background-color: #3cb371;
 }
 #side .box {
 	margin: 0 auto 30px auto;
@@ -173,6 +181,6 @@ body {
 #side .box .boxBody ul li:hover {
 	padding: 8px 0 8px 4px;
 	list-style: none;
-	border-bottom: solid 1px #C36;
+	border-bottom: solid 1px #f4a460;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
